# ai-tutor-langgraph

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  download_prepare_data.py  pyproject.toml  requirements-runtime.txt  requirements.txt
ai_tutor/: __init__.py  config.py  data_utils.py  llama_backend.py  prompts.py
ai_tutor/eval/: __init__.py  evaluator.py
ai_tutor/graph/: __init__.py  workflow.py
ai_tutor/graph/nodes/: __init__.py  build_rag_index_node.py  chat_node.py  evaluate_node.py  fine_tuned_model_node.py  load_config_node.py  prepare_data_node.py
ai_tutor/models/: __init__.py  base_loader.py  inference.py  lora_loader.py
ai_tutor/rag/: __init__.py  ingest.py  retriever.py  store.py
ai_tutor/web/: api.py
cli/: __init__.py  chat.py  run_pipeline.py
docs/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatPanel.tsx  EvalPanel.tsx  PipelineView.tsx
models/lora_adapter.v1/: adapter_config.json
models/lora_adapter.v2/: README.md  adapter_config.json
models/lora_adapter.v2/checkpoint-6/: rng_state.pth  trainer_state.json
models/lora_adapter.v2/runs/Nov29_23-09-30_5a3104b1c321/: events.out.tfevents.1764457773.5a3104b1c321.10869.0
scripts/: build_rag_index.py  fine_tune_qlora.py  run_eval.py
