[project]
name = "ai-tutor-langgraph"
version = "0.1.0"
description = "End-to-end AI Tutor pipeline with QLoRA, RAG, and LangGraph."
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
